Api methods are now class level. Some User methods

--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,7 @@
     <script src="lib/jasmine.jquery.js" type="text/javascript" charset="utf-8"></script>
     
     <script src="specs/api.js" type="text/javascript" charset="utf-8"></script>
+    <script src="specs/user.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
     <script type="text/javascript" charset="utf-8">
