Api messages and refactor

--- a/test/index.html
+++ b/test/index.html
@@ -10,6 +10,7 @@
     <script src="lib/jasmine.phantomjs-reporter.js" type="text/javascript" charset="utf-8"></script>
     <script src="lib/jasmine.jquery.js" type="text/javascript" charset="utf-8"></script>
     
+    <script src="specs/message.js" type="text/javascript" charset="utf-8"></script>
     <script src="specs/api.js" type="text/javascript" charset="utf-8"></script>
     <script src="specs/user.js" type="text/javascript" charset="utf-8"></script>
   </head>
