--- a/test/index.html
+++ b/test/index.html
@@ -13,6 +13,7 @@
     <script src="specs/message.js" type="text/javascript" charset="utf-8"></script>
     <script src="specs/api.js" type="text/javascript" charset="utf-8"></script>
     <script src="specs/user.js" type="text/javascript" charset="utf-8"></script>
+    <script src="specs/subject.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
     <script type="text/javascript" charset="utf-8">
