--- a/test/index.html
+++ b/test/index.html
@@ -14,6 +14,7 @@
     <script src="specs/api.js" type="text/javascript" charset="utf-8"></script>
     <script src="specs/user.js" type="text/javascript" charset="utf-8"></script>
     <script src="specs/subject.js" type="text/javascript" charset="utf-8"></script>
+    <script src="specs/group.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
     <script type="text/javascript" charset="utf-8">
