--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,7 @@
     <script src="specs/user.js" type="text/javascript" charset="utf-8"></script>
     <script src="specs/subject.js" type="text/javascript" charset="utf-8"></script>
     <script src="specs/group.js" type="text/javascript" charset="utf-8"></script>
+    <script src="specs/LoginForm.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
     <script type="text/javascript" charset="utf-8">
