Add Signout from specs and implementation

--- a/test/index.html
+++ b/test/index.html
@@ -16,6 +16,7 @@
     <script src="specs/subject.js" type="text/javascript" charset="utf-8"></script>
     <script src="specs/group.js" type="text/javascript" charset="utf-8"></script>
     <script src="specs/base_form.js" type="text/javascript" charset="utf-8"></script>
+    <script src="specs/login_form.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
     <script type="text/javascript" charset="utf-8">
