--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,7 @@
     <script src="specs/group.js" type="text/javascript" charset="utf-8"></script>
     <script src="specs/base_form.js" type="text/javascript" charset="utf-8"></script>
     <script src="specs/login_form.js" type="text/javascript" charset="utf-8"></script>
+    <script src="specs/top_bar.js" type="text/javascript" charset="utf-i"></script>
   </head>
   <body>
     <script type="text/javascript" charset="utf-8">
