Add specs and implementaion for recents and favorites

--- a/test/index.html
+++ b/test/index.html
@@ -17,7 +17,8 @@
     <script src="specs/group.js" type="text/javascript" charset="utf-8"></script>
     <script src="specs/base_form.js" type="text/javascript" charset="utf-8"></script>
     <script src="specs/login_form.js" type="text/javascript" charset="utf-8"></script>
-    <script src="specs/top_bar.js" type="text/javascript" charset="utf-i"></script>
+    <script src="specs/top_bar.js" type="text/javascript" charset="utf-8"></script>
+    <script src="specs/recent.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
     <script type="text/javascript" charset="utf-8">
