Add Cakefile to compile library

--- a/test/runner.html
+++ b/test/runner.html
@@ -34,17 +34,17 @@
       window.expect = chai.expect;
     </script>
 
-    <script src="../src/lib/event-emitter.coffee" type="text/coffeescript"></script>
+    <script src="../lib/event-emitter.js"></script>
     <script src="./lib/event-emitter.coffee" type="text/coffeescript"></script>
 
-    <script src="../src/lib/proxy-frame.coffee" type="text/coffeescript"></script>
+    <script src="../lib/proxy-frame.js"></script>
     <script src="./lib/proxy-frame.coffee" type="text/coffeescript"></script>
 
-    <script src="../src/lib/api.coffee" type="text/coffeescript"></script>
+    <script src="../lib/api.js"></script>
     <script src="./lib/api.coffee" type="text/coffeescript"></script>
 
     <script src="../vendor/base64.js"></script>
-    <script src="../src/models/user.coffee" type="text/coffeescript"></script>
+    <script src="../models/user.js"></script>
     <script src="./models/user.coffee" type="text/coffeescript"></script>
 
     <script>
