Clean up test runner, start on generic subject

--- a/test/helpers/proxy/index.html
+++ b/test/helpers/proxy/index.html
@@ -15,6 +15,6 @@
     <script src="../../../node_modules/sinon/lib/sinon/util/fake_xml_http_request.js"></script>
     <script src="../../../node_modules/sinon/lib/sinon/util/fake_server.js"></script>
     <script src="../../vendor/coffee-script.js"></script>
-    <script src="./proxy.coffee" type="text/coffeescript"></script>
+    <script src="./proxy.js"></script>
   </body>
 </html>
