--- a/test/runner.html
+++ b/test/runner.html
@@ -35,17 +35,22 @@
     </script>
 
     <script src="../lib/event-emitter.js"></script>
-    <script src="./lib/event-emitter.coffee" type="text/coffeescript"></script>
 
     <script src="../lib/proxy-frame.js"></script>
-    <script src="./lib/proxy-frame.coffee" type="text/coffeescript"></script>
-
     <script src="../lib/api.js"></script>
-    <script src="./lib/api.coffee" type="text/coffeescript"></script>
 
     <script src="../vendor/base64.js"></script>
     <script src="../models/user.js"></script>
-    <script src="./models/user.coffee" type="text/coffeescript"></script>
+
+    <script src="../models/base-model.js"></script>
+    <script src="../models/subject.js"></script>
+
+    <script src="./lib/event-emitter.js"></script>
+    <script src="./lib/proxy-frame.js"></script>
+    <script src="./lib/api.js"></script>
+    <script src="./models/user.js"></script>
+    <script src="./models/base-model.js"></script>
+    <script src="./models/subject.js"></script>
 
     <script>
       setTimeout(function() {
