Start on a new test setup with a fake back end

--- a/test/helpers/proxy/index.html
+++ b/test/helpers/proxy/index.html
@@ -10,6 +10,8 @@
   <body>
     <script src="../../vendor/jquery.js"></script>
     <script src="../../vendor/jquery.mockjax.js"></script>
+
+    <script src="./database.js"></script>
     <script src="./proxy.js"></script>
   </body>
 </html>
