--- a/test/runner.html
+++ b/test/runner.html
@@ -42,12 +42,12 @@
     <script src="../models/favorite.js"></script>
     <script src="../models/classification.js"></script>
 
-    <!--<script src="./lib/event-emitter.js"></script>
+    <script src="./lib/event-emitter.js"></script>
     <script src="./lib/proxy-frame.js"></script>
     <script src="./lib/api.js"></script>
     <script src="./models/base-model.js"></script>
     <script src="./models/subject.js"></script>
-    <script src="./models/user.js"></script>-->
+    <script src="./models/user.js"></script>
     <script src="./models/classification.js"></script>
 
     <script>
