--- a/test/runner.html
+++ b/test/runner.html
@@ -32,22 +32,28 @@
     </script>
 
     <script src="../lib/event-emitter.js"></script>
+    <script src="./lib/event-emitter.js"></script>
+
     <script src="../lib/proxy-frame.js"></script>
+    <script src="./lib/proxy-frame.js"></script>
+
     <script src="../lib/api.js"></script>
+    <script src="./lib/api.js"></script>
+
     <script src="../models/base-model.js"></script>
+    <script src="./models/base-model.js"></script>
+
     <script src="../models/subject.js"></script>
+    <script src="./models/subject.js"></script>
+
     <script src="../vendor/base64.js"></script>
     <script src="../models/user.js"></script>
+    <script src="./models/user.js"></script>
+
+    <script src="../lib/language-manager.js"></script>
     <script src="../models/recent.js"></script>
     <script src="../models/favorite.js"></script>
     <script src="../models/classification.js"></script>
-
-    <script src="./lib/event-emitter.js"></script>
-    <script src="./lib/proxy-frame.js"></script>
-    <script src="./lib/api.js"></script>
-    <script src="./models/base-model.js"></script>
-    <script src="./models/subject.js"></script>
-    <script src="./models/user.js"></script>
     <script src="./models/classification.js"></script>
 
     <script>
